--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 
-@import 'angular-tree-component.css';
+@import from '@circlon/angular-tree-component.css';
 .reverse tree-node-expander {
   order: 0;
 }
