--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 
 @import 'angular-tree-component.css';
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+html *
+{
+  font-size: 1em;
+  color: #000;
+  font-family: Montserrat;
+}
 .reverse tree-node-expander {
   order: 0;
 }
