fixed input field typo

--- a/src/app/fulltree/fulltree.component.html
+++ b/src/app/fulltree/fulltree.component.html
@@ -18,7 +18,7 @@
         <div id="{{node.data.name}}{{childrenCount(node)}}">
           <div id="response">
             <label style="color: black;">Response Option</label>
-            <input></input>
+            <input type="text" value="Enter an option">
           </div>
         </div>
       </ng-template>
