--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,9 @@ html *
   font-size: 1em;
   color: #353535;
   font-family: Montserrat;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 .reverse tree-node-expander {
   order: 0;
@@ -19,3 +22,98 @@ html *
 }
 .root1Class { color: blue }
 .root2Class { color: red }
+
+
+.node-content-wrapper, .tree-children {
+  position: relative;
+  width: 100%;
+}
+
+.node-content-wrapper::before, .tree-children::after {
+  content: "";
+  position: absolute;
+}
+
+.node-content-wrapper::before {
+  border-bottom: 1px solid lightgrey;
+  border-left: 1px solid lightgrey;
+  height: 28px;
+  top: -17px;
+  width: 20px;
+  left: -28px;
+}
+
+.tree-node-level-1 > tree-node-wrapper > .node-wrapper > .node-content-wrapper::before {
+  display: none;
+}
+
+.tree-node-leaf > .node-wrapper > .node-content-wrapper::before {
+  width: 25px;
+}
+
+.tree-children::after {
+  border-left: 1px solid lightgrey;
+  height: 100%;
+  top: -15px;
+  left: -15px;
+}
+
+tree-node:last-child > .tree-node > .tree-children::after {
+  border-left: none;
+}
+
+.toggle-children {
+  z-index: 1;
+}
+
+.node-input {
+  width: 100%;
+  margin-top: 8px;
+  margin-bottom: 12px;
+  padding: 8px;
+}
+
+.toggle-label{
+  grid-area: toggle-label;
+  padding: 8px;
+}
+
+.toggle-button{
+  grid-area: toggle-button;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 12px;
+  padding-right: 12px;
+  border-radius: 2px;
+  border-width: 0;
+  background: teal;
+  color: white;
+}
+
+.message-label{
+  grid-area: message-label;
+  padding: 8px;
+}
+
+.message-input{
+  grid-area: message-input;
+  padding: 8px;
+}
+
+.branch-end-grid{
+  display: grid;
+  grid-template-areas: 'toggle-label toggle-button message-label message-input message-input message-input message-input message-input message-input message-input message-input message-input message-input message-input message-input message-input message-input message-input message-input message-input message-input';
+  gap: 8px;
+}
+
+.node-option-selector {
+  padding: 8px;
+}
+
+.node-buttons-grid{
+
+}
+
+.padded-label {
+  font-weight: 500;
+}
