--- a/src/app/fulltree/fulltree.component.html
+++ b/src/app/fulltree/fulltree.component.html
@@ -15,26 +15,26 @@
       <!-- <span title="{{node.data.subTitle}}">{{ node.data.name }}</span>
       <span class="pull-right">{{ childrenCount(node) }}</span>
       <button (click)="go($event)">Custom Action</button> -->
-      <ng-container *ngIf="node.isAnswer == true">
+      <ng-container *ngIf="node.data.isAnswer">
         <div id="option{{node.data.name}}{{childrenCount(node)}}">
           <div id="response">
             <label class="padded-label">Response Option</label>
-            <div><input type="text" placeholder="Enter an option" class="node-input"></div>
+            <div><input type="text" placeholder="Enter an option" class="node-input" [value]='node.data.answerText'></div>
           </div>
         </div>
     </ng-container>
-      <select id="nextselect" class="node-option-selector" [(ngModel)]="node.optionValue">
+      <select id="nextselect" class="node-option-selector" [(ngModel)]="node.data.optionValue">
         <option value="question">Question</option>
         <option value="branchend">End of branch</option>
       </select>
-      <ng-container *ngIf="node.optionValue == 'question'">
+      <ng-container *ngIf="node.data.optionValue == 'question'">
         <div id="question{{node.data.name}}{{childrenCount(node)}}">
           <div id="question">
-            <div><input type="text" placeholder="Type to search for questions" class="node-input"></div>
+            <div><input type="text" placeholder="Type to search for questions" class="node-input" [value]='node.data.qText'></div>
           </div>
         </div>
       </ng-container>
-      <ng-container *ngIf="node.optionValue == 'branchend'">
+      <ng-container *ngIf="node.data.optionValue == 'branchend'">
         <div id="branchend{{node.data.name}}{{childrenCount(node)}}">
           <div id="branchend">
             <div class="branch-end-grid">
@@ -46,7 +46,7 @@
                 </div>
               </label>
               <label class="message-label">Message</label>
-              <input type="text" placeholder="Please type a message to display" class="message-input">
+              <input type="text" placeholder="Please type a message to display" class="message-input" [value]='node.data.messageText'>
             </div>
           </div>
         </div>
