changed property names to identify UI related ones. Fixed toggle value binding

--- a/src/app/fulltree/fulltree.component.html
+++ b/src/app/fulltree/fulltree.component.html
@@ -39,8 +39,8 @@
           <div id="branchend">
             <div class="branch-end-grid">
               <label class="switch">
-                <input type="checkbox" id="togBtn">
-                <div class="slider round" style="display: inline-block;" [value]="node.data.pass"> 
+                <input type="checkbox" id="togBtn" [value]="node.data.pass">
+                <div class="slider round" style="display: inline-block;"> 
                   <span class="on">Pass</span>
                   <span class="off">Fail</span>
                 </div>
