More fixes to ui property mapping

--- a/src/app/fulltree/fulltree.component.html
+++ b/src/app/fulltree/fulltree.component.html
@@ -54,13 +54,12 @@
       <div id="node-buttons" class="node-buttons-grid">
         <button id="add-option" class="common-button add-option">+ Add response option</button>
         <button id="add-question" class="common-button add-question">+ Add question</button>
-        <button id="add-end" class="common-button add-end">+ Add end of branch</button>
         <div class="spacer"></div>
         <button id="qdetails" class="common-button qdetails">View details</button>
         <button id="deleteitem" class="common-button deleteitem">Delete</button>
       </div>
     </ng-template>
-    <ng-template #loadingTemplate>Loading, please hold....</ng-template>
+    <ng-template #loadingTemplate></ng-template>
   </tree-root>
 </div>
 <br>
