test to add nodes

--- a/src/app/fulltree/fulltree.component.html
+++ b/src/app/fulltree/fulltree.component.html
@@ -52,7 +52,7 @@
         </div>
       </ng-container>
       <div id="node-buttons" class="node-buttons-grid">
-        <button id="add-option" class="common-button add-option">+ Add response option</button>
+        <button id="add-option" class="common-button add-option" (click)="addNode(tree)">+ Add response option</button>
         <button id="add-question" class="common-button add-question">+ Add question</button>
         <div class="spacer"></div>
         <button id="qdetails" class="common-button qdetails">View details</button>
