--- a/src/app/fulltree/fulltree.component.html
+++ b/src/app/fulltree/fulltree.component.html
@@ -55,12 +55,12 @@
         <ng-container *ngIf="node.data.qType == 1">
           <button id="add-option" class="common-button add-option" (click)="addOption(tree)">+ Add response option</button>
         </ng-container>
-        <button id="add-question" class="common-button add-question" (click)="addNode(tree)">+ Add question</button>
+        <button id="add-question" class="common-button add-question" (click)="addNode(tree, node.index)">+ Add question</button>
         <div class="spacer"></div>
         <ng-container *ngIf="node.data.optionValue == 'question'">
           <button id="qdetails" class="common-button qdetails">View details</button>
         </ng-container>
-        <button id="deleteitem" class="common-button deleteitem" (click)="removeNode(tree, node.data.ui_uuid)">Delete</button>
+        <button id="deleteitem" class="common-button deleteitem" (click)="removeNode(tree, node.index)">Delete</button>
       </div>
     </ng-template>
     <ng-template #loadingTemplate></ng-template>
