test ngModel for option message

--- a/src/app/fulltree/fulltree.component.html
+++ b/src/app/fulltree/fulltree.component.html
@@ -46,7 +46,7 @@
                 </div>
               </label>
               <label class="message-label">Message</label>
-              <input type="text" placeholder="Please type a message to display" class="message-input" [value]="node.data.messageText">
+              <input type="text" placeholder="Please type a message to display" class="message-input" [(ngModel)]="node.data.messageText">
             </div>
           </div>
         </div>
