--- a/src/app/fulltree/fulltree.component.html
+++ b/src/app/fulltree/fulltree.component.html
@@ -1,7 +1,15 @@
 <form>
   <!-- <input #filter (keyup)="filterNodes(filter.value, tree)" placeholder="filter nodes"/> -->
 </form>
-<div style="height: 650px; width: 1200px; overflow: hidden;">
+<div style='padding: 20px; width: 100%; height: 300px;'>
+  <h1 style='font-size: 2em;'>Create or edit question sets</h1>
+  <br/>
+  <label class="padded-label">Select a question set</label>
+  <div><input class='node-input'  style='width: 1200px' value='Daily permit questions'></div>
+  <br/><br/><br/>
+  <div style='height= 100px;'>Question set details go here: effective date, version history. etc.</div>
+</div>
+<div style="height: 650px; width: 1200px; overflow: hidden; padding: 20px">
 
   <tree-root
     #tree
@@ -52,8 +60,8 @@
         </div>
       </ng-container>
       <div id="node-buttons" class="node-buttons-grid">
-        <ng-container *ngIf="node.data.qType == 1">
-          <button id="add-option" class="common-button add-option" (click)="addOption(tree, node.index)">+ Add response option</button>
+        <ng-container *ngIf="node.data.qType >= 0">
+          <button id="add-option" class="common-button add-option" (click)="addOption(tree, node)">+ Add response option</button>
         </ng-container>
         <button id="add-question" class="common-button add-question" (click)="addNode(tree, node.index)">+ Add question</button>
         <div class="spacer"></div>
