--- a/src/app/fulltree/fulltree.component.html
+++ b/src/app/fulltree/fulltree.component.html
@@ -1,13 +1,26 @@
-<form>
-  <!-- <input #filter (keyup)="filterNodes(filter.value, tree)" placeholder="filter nodes"/> -->
-</form>
-<div style='padding: 20px; width: 100%; height: 300px;'>
+
+<div style='padding: 20px; width: 100%;'>
   <h1 style='font-size: 2em;'>Create or edit question sets</h1>
   <br/>
   <label class="padded-label">Select a question set</label>
-  <div><input class='node-input'  style='width: 1200px' value='Daily permit questions'></div>
-  <br/><br/><br/>
-  <div style='height= 100px;'>Question set details go here: effective date, version history. etc.</div>
+  <div style="width: 1200px;">
+    <input class='node-input'  style='width: 80%; margin-right: 40px;' value='Daily permit questions'>
+    <button id="add-question" class="common-button add-question">+ Add question set</button>
+  </div>
+  <table class='info-table'>
+    <td class="info-table td-label">Code</td><td class="info-table td-data">mde_daily_permit</td>
+  </table>
+  <br/>
+  <label class="padded-label">Select a version</label>
+  <div style="width: 1200px;">
+    <input class='node-input'  style='width: 80%; margin-right: 40px;' value='Questions from MOECS 2024'>
+    <button id="add-question" class="common-button add-question">+ Add new version</button>
+  </div>
+  <table class='info-table'>
+    <td class="info-table td-label">Effective Date</td><td class="info-table td-data">08/31/2023</td>
+    <td class="info-table td-label">End Date</td><td class="info-table td-data"></td>
+    <td class="info-table td-label">Code</td><td class="info-table td-data">mde_daily_permit</td>
+  </table>
 </div>
 <div style="height: 650px; width: 1200px; overflow: hidden; padding: 20px">
 
