--- a/src/styles.css
+++ b/src/styles.css
@@ -35,12 +35,12 @@ html *
 }
 
 .node-content-wrapper::before {
-  border-bottom: 1px solid lightgrey;
-  border-left: 1px solid lightgrey;
+  border-bottom: 1px solid #277c78;
+  border-left: 1px solid #277c78;
   height: 28px;
   top: -17px;
-  width: 20px;
-  left: -28px;
+  width: 30px;
+  left: -55px;
 }
 
 .tree-node-level-1 > tree-node-wrapper > .node-wrapper > .node-content-wrapper::before {
@@ -52,10 +52,10 @@ html *
 }
 
 .tree-children::after {
-  border-left: 1px solid lightgrey;
+  border-left: 1px solid #277c78;
   height: 100%;
   top: -15px;
-  left: -15px;
+  
 }
 
 tree-node:last-child > .tree-node > .tree-children::after {
