--- a/src/styles.css
+++ b/src/styles.css
@@ -23,6 +23,11 @@ html *
 .root1Class { color: blue }
 .root2Class { color: red }
 
+.node-content-wrapper {
+  border: 1px solid #e0e0e0;
+  border-radius: 2px;
+  padding: 8px;
+}
 
 .node-content-wrapper, .tree-children {
   position: relative;
