changed version code

--- a/src/app/fulltree/fulltree.component.html
+++ b/src/app/fulltree/fulltree.component.html
@@ -19,7 +19,7 @@
   <table class='info-table'>
     <td class="info-table td-label">Effective Date</td><td class="info-table td-data">08/31/2023</td>
     <td class="info-table td-label">End Date</td><td class="info-table td-data"></td>
-    <td class="info-table td-label">Code</td><td class="info-table td-data">mde_daily_permit</td>
+    <td class="info-table td-label">Code</td><td class="info-table td-data">mde_daily_permit_001</td>
   </table>
 </div>
 <div style="height: 650px; width: 1200px; overflow: hidden; padding: 20px;">
